//! Python bindings for workspace-qdrant-mcp ingestion engine
//!
//! This crate provides PyO3 bindings that allow Python code to interface
//! with the Rust ingestion engine.
//!
//! NOTE: This is currently placeholder code. The actual implementation will use
//! workspace_qdrant_core::ipc::IpcClient instead of gRPC for daemon communication.

use pyo3::prelude::*;
use pyo3::types::PyModule;
use pyo3::Bound;
use std::collections::HashMap;

/// Python-accessible ingestion engine (placeholder implementation)
#[pyclass]
pub struct RustIngestionEngine {
    // Note: These fields will be used when actual functionality is implemented
    // Future: Will use IpcClient instead of gRPC
    grpc_port: u16,
}

#[pymethods]
impl RustIngestionEngine {
    #[new]
    fn new(_config: HashMap<String, PyObject>) -> PyResult<Self> {
        // Initialize with default configuration for now
        // In future: parse config dict into proper configuration and create IpcClient
        Ok(Self {
            grpc_port: 0,
        })
    }

    fn start(&mut self, _py: Python<'_>) {
        // Placeholder for engine startup
        // Future: connect to daemon via IPC
        self.grpc_port = 50051; // Default port for testing
    }

    fn stop(&mut self, _py: Python<'_>) {
        // Placeholder for engine shutdown
        // Future: disconnect from daemon
        self.grpc_port = 0;
    }

    fn grpc_port(&self) -> u16 {
        self.grpc_port
    }

    fn get_state(&self) -> String {
        "RUNNING".to_string()
    }

    fn process_document(&self, _file_path: String, _collection: String) -> String {
        // Placeholder for document processing
        // Future: send processing request via IPC to daemon
        format!("Processed {} into collection {}", _file_path, _collection)
    }
}

/// Python-accessible health check function
#[pyfunction]
fn health_check() -> bool {
    // Placeholder health check
    // Future: check IPC connection to daemon
    true
}

/// Module initialization for Python
#[pymodule]
fn workspace_qdrant_python_bindings(m: &Bound<'_, PyModule>) -> PyResult<()> {
    m.add_class::<RustIngestionEngine>()?;
    m.add_function(wrap_pyfunction!(health_check, m)?)?;
    Ok(())
}

#[cfg(test)]
mod tests {
    use super::*;
    use std::collections::HashMap;

    #[test]
    fn test_health_check() {
        assert!(health_check());
    }

    #[test]
    fn test_engine_creation() {
        let config = HashMap::new();
        let engine = RustIngestionEngine::new(config);
        assert!(engine.is_ok());
    }
}
